--- a/packages/vanilla/src/sass/components/radio/_index.scss
+++ b/packages/vanilla/src/sass/components/radio/_index.scss
@@ -10,6 +10,7 @@
   margin: 0;
   position: relative;
   width: var(--cbp-space-7x);
+  vertical-align: middle;
 
   &::before {
 		content: '';
